[gd_scene load_steps=8 format=3 uid="uid://c4xfx6k5vl64x"]

[ext_resource type="Script" path="res://ui/BarControl.gd" id="1_kt0oe"]
[ext_resource type="Texture2D" uid="uid://csppbhssy1fxc" path="res://entities/player/bars/hpBarEmpty.png" id="2_1bdi7"]
[ext_resource type="Texture2D" uid="uid://c07p6ipi2ea2m" path="res://entities/player/bars/hpBarFull.png" id="3_2m8ij"]
[ext_resource type="Texture2D" uid="uid://cs86utm3fhc8" path="res://entities/player/bars/hpBarLowerMax.png" id="4_r8ktx"]
[ext_resource type="Texture2D" uid="uid://cpr4ljkcnt3xy" path="res://entities/player/bars/dashbarEmpty.png" id="5_7afuc"]
[ext_resource type="Texture2D" uid="uid://dxkalu60ndiyn" path="res://entities/player/bars/dashbarFull.png" id="6_2lxa6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2dsg"]
bg_color = Color(0.577008, 0.577008, 0.577008, 1)
corner_radius_bottom_right = 20

[node name="Bar UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kt0oe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 186.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w2dsg")

[node name="hpBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 21.0
scale = Vector2(4, 4)
max_value = 10.0
value = 10.0
texture_under = ExtResource("2_1bdi7")
texture_progress = ExtResource("3_2m8ij")

[node name="lowerMaxBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 21.0
scale = Vector2(4, 4)
max_value = 10.0
value = 5.0
fill_mode = 1
texture_progress = ExtResource("4_r8ktx")

[node name="dashBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 51.0
offset_bottom = 81.0
scale = Vector2(4, 4)
max_value = 1.0
value = 1.0
texture_under = ExtResource("5_7afuc")
texture_progress = ExtResource("6_2lxa6")
